tests/ui/fail/method_const.stderr
error: #[extern_trait] does not support const functions
 --> tests/ui/fail/method_const.rs:5:5
  |
5 |     const fn value(&self) -> i32;
  |     ^^^^^
